added somes to ignore list readme file added

--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,16 @@ bin-release/
 
 # Other files and folders
 .settings/
+.builds/
+
+
 
 # Executables
 *.swf
 *.air
 *.ipa
 *.apk
+*.p12
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
